# ai-career-platform

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/projects/: ai-web-agent.md  elsa-ai-assistant.md  enterprise-platforms.md
docs/: AGENT_PROMPT.md  ARCHITECTURE.md  CACHING.md  CODEBASE.md  DEPLOYMENT.md  LOCAL_SETUP.md  OBSERVABILITY.md  PRODUCT_VISION.md  SHARED_LIBRARIES.md
docs/services/: README.md  api.md  frontend.md  ingestion.md  runtime.md  shared-core.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/_sections/: DocumentsSection.tsx  ExperienceSection.tsx  ProfileSection.tsx  ProjectsSection.tsx  SkillsSection.tsx  shared.tsx
frontend/src/app/experience/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/resume/: route.ts
frontend/src/app/skills/: page.tsx
frontend/src/components/chat/: ChatSidebar.tsx  ChatWindow.tsx  FollowUpChips.tsx  InputBar.tsx  MessageBubble.tsx  StepTrace.tsx  TypingIndicator.tsx  WelcomeCard.tsx
frontend/src/components/experience/: ExperienceTimeline.tsx
frontend/src/components/landing/: GraphCarousel.tsx  Hero.tsx  Particles.tsx  RuntimeGraph.tsx
frontend/src/components/projects/: ProjectDetail.tsx  ProjectGraphPanel.tsx
frontend/src/components/skills/: SkillModuleGrid.tsx
frontend/src/components/ui/: Navbar.tsx  PageLoader.tsx  PageShell.tsx  SocialIcons.tsx
frontend/src/components/widgets/: ArchitectureCard.tsx  ProjectCard.tsx  ResumePreview.tsx  SkillGraph.tsx  TechStack.tsx  WidgetRenderer.tsx
frontend/src/hooks/: queryKeys.ts  useDocuments.ts  useExperiences.ts  useProfile.ts  useProjects.ts  useSkills.ts
frontend/src/lib/: graphTopologies.tsx  links.ts  questions.ts  utils.ts
frontend/src/services/: admin.ts  chat.ts  documents.ts  experiences.ts  mockAI.ts  profile.ts  projects.ts  skills.ts
frontend/src/types/: chat.ts
infrastructure/docker/: Caddyfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.runtime  docker-compose.prod.yml
mcp/career/: pyproject.toml
mcp/career/app/: registry.py  server.py
mcp/github/: pyproject.toml
mcp/github/app/: main.py  server.py
mcp/interview/: pyproject.toml
mcp/interview/app/: server.py
mcp/portfolio/: pyproject.toml
mcp/portfolio/app/: server.py
mcp/resume/: pyproject.toml
mcp/resume/app/: server.py
services/api/: .env.example  .env.prod.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 39abf09e55fe_drop_unused_projects_experiences_skills_.py  56771581f690_add_profile_social_links_experiences_.py  98c797969bcf_add_projects_experiences_skills_.py  bc5a6210f862_add_profile_stats.py
services/api/app/: main.py
services/api/app/api/v1/: admin.py  chat.py  documents.py  experiences.py  health.py  profile.py  projects.py  routers.py  skills.py
services/api/app/clients/: http.py
services/api/app/core/: lifespan.py  logging.py  rate_limit.py  settings.py
services/api/app/db/: postgres.py  qdrant.py  redis.py
services/api/app/db/models/: __init__.py  base.py  document.py  experience.py  profile.py  project.py  skill.py
services/api/app/dependencies/: __init__.py  auth.py  db.py  rate_limit.py  settings.py
services/api/app/middleware/: __init__.py  errors.py  logging.py
services/api/app/schemas/: __init__.py  chat.py  document.py  experience.py  profile.py  project.py  skill.py
services/api/tests/: test_chat_schemas.py  test_rate_limit.py
services/ingestion/: .env.example  .env.prod.example  pyproject.toml
services/ingestion/app/: chunker.py  cli.py  db.py  loader.py  pipeline.py  store.py
services/ingestion/app/readers/: __init__.py  pdf.py  text.py
services/ingestion/tests/: test_chunker.py  test_loader.py  test_pipeline.py  test_readers.py
services/runtime/: .env.example  .env.prod.example  pyproject.toml  run_dev.py
services/runtime/app/: main.py  streaming.py
services/runtime/app/api/v1/: health.py  run.py
services/runtime/app/core/: cache.py  llm.py  logging.py  response_cache.py  settings.py
services/runtime/app/executor/: task_executor.py
services/runtime/app/graphs/: __init__.py  career.py
services/runtime/app/knowledge/: profile.py
services/runtime/app/memory/: __init__.py  checkpointer.py  session.py
services/runtime/app/prompts/: career.py
services/runtime/app/state/: __init__.py  agent_state.py
services/runtime/app/tools/: retrieval.py
services/runtime/evals/: ragas_eval.py  rank_check.py
services/runtime/tests/: test_cache.py  test_career_graph.py  test_llm.py  test_prompts.py  test_retrieval.py  test_run.py  test_streaming.py  test_task_executor.py
shared/core/: pyproject.toml
shared/core/core/: __init__.py
shared/core/core/config/: __init__.py  base.py  constants.py  loader.py
shared/core/core/config/groups/: __init__.py  auth.py  database.py  github.py  llm.py  observability.py  qdrant.py  redis.py
shared/core/core/embeddings/: __init__.py  factory.py
shared/core/core/exceptions/: __init__.py  base.py  handlers.py
shared/core/core/logging/: __init__.py  setup.py
shared/core/core/models/: __init__.py  base.py
shared/core/core/telemetry/: __init__.py  setup.py
shared/core/core/utils/: __init__.py  datetime.py  retry.py  slugify.py
shared/core/tests/: test_embeddings_factory.py
