[tool.poetry]
name = "ravinder-ai"
version = "0.1.0"
description = "AI Career Platform — multi-agent portfolio assistant"
authors = ["Varikuppala Ravinder <it.ravinder.456@gmail.com>"]
python = ">=3.11,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
ruff = "^0.3"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
