[tool.poetry]
name = "ravinder-ai-mcp-portfolio"
version = "0.1.0"
description = "MCP server — portfolio tools"
authors = ["Varikuppala Ravinder <it.ravinder.456@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mcp = "^1.0"
pydantic = "^2.7"
pydantic-settings = "^2.2"
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
