[project]
name = "ravinder-ai-api"
version = "0.1.0"
description = "Public REST/SSE API service"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ravinder-ai-core",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false

[tool.uv.sources]
ravinder-ai-core = { path = "../../shared/core" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

