[project]
name = "ravinder-ai-ingestion"
version = "0.1.0"
description = "RAG ingestion pipeline — load, chunk, embed, upsert to Qdrant"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ravinder-ai-core",
    "structlog>=26.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
ravinder-ai-core = { path = "../../shared/core" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
