[project]
name = "ravinder-ai-runtime"
version = "0.1.0"
description = "LangGraph multi-agent runtime service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "langsmith>=0.10.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
