[project]
name = "ravinder-ai-runtime"
version = "0.1.0"
description = "LangGraph multi-agent runtime service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=1.0.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.10.5",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ravinder-ai-core",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv.sources]
ravinder-ai-core = { path = "../../shared/core" }

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
